--- a/WiMe/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/WiMe/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -10,12 +10,12 @@
         android:translateY="40.5">
         <path
             android:fillColor="#FF6B6B"
-            android:pathData="M64,64m-44,0a44,44 0,1 1,8 0a4,44 0,1 1,-88 0"/>
+            android:pathData="M40,40 L68,40 L74,54 L80,40 L108,40 L108,48 L86,48 L78,66 L86,84 L108,84 L108,92 L80,92 L74,76 L68,92 L40,92 L40,84 L62,84 L70,66 L62,48 L40,48 Z"/>
         <path
-            android:fillColor="#FFFFFF"
-            android:pathData="M64,64m-30,0a30,30 0,1 1,60 0a30,30 0,1 1,-60 0"/>
+            android:fillColor="#4A90E2"
+            android:pathData="M10,10 L38,10 L38,18 L18,18 L18,36 L10,36 Z"/>
         <path
-            android:fillColor="#FF6B6B"
-            android:pathData="M64,64m-15,0a15,15 0,1 1,30 0a15,15 0,1 1,-30 0"/>
+            android:fillColor="#4A90E2"
+            android:pathData="M38,36 L38,64 L30,64 L30,44 L10,44 L10,36 Z"/>
     </group>
 </vector>
